--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background: url('../asanoha-400px/asanoha-400px.png');
+	background: url('../images/asanoha-400px.png');
 	font-size: 18px;
 	line-height: 34px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica,
@@ -28,7 +28,7 @@ p:last-child {
 }
 
 h1, h2, h3 {
-	font-family: 'Georgia', Times, Times New Roman,
+	font-family: 'Georgia', Times, 'Times New Roman',
 	 serif;
 	 font-weight: 700;
 	 color: #4aaaa5;
@@ -43,6 +43,7 @@ h1 {
 
 h2, h3 {
 	font-size: 22px;
+	font-weight: bold;
 }
 /*header*/
 
@@ -122,6 +123,10 @@ nav a:first-child {
 	float: right;
 	border: 1px solid #ddd;
 	margin-bottom: 20px;
+}
+
+a {
+	text-decoration: none;
 }
 
 h3, .sidebar, h2 {
@@ -233,13 +238,84 @@ input[type=submit] {
 
 /*Desktop*/
 @media only screen and (max-width: 980px) {
+	.main-section, #logo {
+		margin-left: 125px;
+	}
+
+	.main-section {
+		width: 419px;
+	}
+
+	nav, .sidebar {
+		margin-right: 97px;
+	}
+
+	.work {
+		width: 100%;
+		margin: 0,10,0,10;
+
+	}
+
 
 }
 /*Tablet in landscape */
 @media only screen and (max-width: 768px) {
 
+	.main-section, #logo {
+		margin-left: 18px;
+		margin-right: 16px;
+	}
+
+	.main-section {
+		width: 95%;
+		max-width: 95%;
+
+	}
+
+	nav, .sidebar {
+		margin-right: 16px;
+
+	}
+
+	.sidebar {
+		width: 95%;
+		max-width: 95%;
+		float: left;
+		margin-left: 18px;
+		margin-right: 16px;
+		
+	}
+
+	.work {
+		width: 45%;
+		
+	}
+
+
 }
 /*phone in landscape*/
 @media only screen and (max-width: 640px) {
+
+	#logo, nav {
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+
+	}
+
+	nav a {
+		padding: 20px;
+		width: 30%;
+		border: none;
+		clear: both;
+}
+	
+	.work {
+		width: 100%;
+	}
+
+	.main-section {
+		margin-top: 40px;
+	}
 
 }
